microservices/grafana/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.mancuso.services`)
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: sso
          namespace: default
  tls: {}

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.mancuso.services`)
      kind: Rule
      priority: 10
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: redirect-https
          namespace: default
